--- a/style.css
+++ b/style.css
@@ -1,6 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=My+Soul&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300&family=Ramaraja&display=swap');
+
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e3f2fd;
+}
+.input-field{
+   position: relative;
+   height: 50px;
+   width: 280px;
+    border-radius: 6px;
+    background-color: #fff;
+    border-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+}
+.input-field input{
+   height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
+    border-radius: 6px;
+    padding: 0px 15px;
+}
+.input-field .email-icon{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+
+    
 }
