--- a/style.css
+++ b/style.css
@@ -27,15 +27,21 @@ body {
     width: 100%;
     border: none;
     outline: none;
-    font-size: 1.2rem;
+    font-size: 15px;
     border-radius: 6px;
     padding: 0px 15px;
+    font-weight: 400;
+}
+.input-field::placeholder{
+    color: #b4b4b4;
+
 }
 .input-field .email-icon{
     position: absolute;
+    right: 15px;
     top: 50%;
-    left: 15px;
     transform: translateY(-50%);
-
+    font-size: 22px;
+    color: #b4b4b4;
     
 }
